Fixed some gaping dev holes

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -434,6 +434,8 @@ body
         animation: question-flyIn 1s ease
 
 #question-list
+    .front
+        padding-top: 40px
     ul
         list-style: none
         li
